static/output/stdout_1234.txt
Traceback (most recent call last):
  File "c:\Users\Hello\OneDrive\Code Tutorial\Python\coganh-main\game_manager.py", line 107, in activation
    reload(UserBot)
  File "C:\Users\Hello\AppData\Local\Programs\Python\Python310\lib\importlib\__init__.py", line 169, in reload
    _bootstrap._exec(spec, module)
  File "<frozen importlib._bootstrap>", line 619, in _exec
  File "<frozen importlib._bootstrap_external>", line 879, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1017, in get_code
  File "<frozen importlib._bootstrap_external>", line 947, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "c:\Users\Hello\OneDrive\Code Tutorial\Python\coganh-main\static\botfiles\botfile_1234.py", line 4
    for mx, my in move
                      ^
SyntaxError: expected ':'
